--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <h4 class="text-faded mb-5 text-background text-white"> La solución más económica funcional para productos de almacenamiento general</h4>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Comprar</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger btn-lg" href="#about">Comprar</a>
           </div>
         </div>
       </div>
@@ -92,109 +92,94 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center">
-              <h2 class="section-heading">Nuestros Servicios</h2>
+              <h2 class="section-heading">La estantería puede hacer la diferencia en su empresa</h2>
               <hr class="my-4">
             </div>
           </div>
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-lg-6 col-md-6 text-left">
               <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios001.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Diagnóstico por computadora</h4>
-                <p class="text-muted mb-0"></p>
+              	<h2>Ventajas</h2>
+               <ul>
+               		<li>Fácil armado y desarmado.</li>
+					<li>Fácil transporte.</li>
+					<li>Facilita el control de Inventarios.</li>
+					<li>Económico y funcional.</li>
+					<li>Acceso rápido del usuario.</li>
+					<li>Diversas aplicaciones.</li>
+
+               </ul>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
+            <div class="col-lg-6 col-md-6 text-left">
               <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios002.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Suspensiones Generales</h4>
-                <p class="text-muted mb-0"></p>
+              	<h2>Aplicaciones</h2>
+               <ul>
+               		<li>Fácil armado y desarmado.</li>
+					<li>Fácil transporte.</li>
+					<li>Facilita el control de Inventarios.</li>
+					<li>Económico y funcional.</li>
+					<li>Acceso rápido del usuario.</li>
+					<li>Diversas aplicaciones.</li>
+
+               </ul>
               </div>
             </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios003.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Afinaciones Fuel injection</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios004.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Sistema eléctrico en general</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios005.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Sistema de frenos ABS o convencionales</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios006.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Sistema de enfriamiento general</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios007.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Clínicas automotrices, servicio completo</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios008.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Transmisiones automáticas y estándar</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios009.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">¨Programación de Sistemas Easytronic</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios010.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Suspensión y dirección estándar o hidráulica</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios011.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Programación de módulos</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-              <div class="service-box mt-5 mx-auto">
-                <img src="img/servicios/servicios012.jpg" class="img-responsive" width="150">
-                <h4 class="mb-3">Servicio a sistema Diésel a vehículos ligeros</h4>
-                <p class="text-muted mb-0"></p>
-              </div>
-            </div>
+           
           </div>
         </div>
       </section>
-      <div class="bg-purple text-white propiedades">
+      <div class="bg-orange text-white propiedades">
         <div class="container text-center">
-          <h1 class="mb-4">CONTACTO</h1>
+          <h1 class="mb-4">CONOCE NUESTAS ESTANTERÍAS METÁLICAS</h1>
+          <a href="catalogo.pdf"><button class="btn btn-lg btn-warning">Descargar catálogo</button></a>
         </div>
       </div>
+      <section id="problemas">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h2 class="section-heading">FACILITA LA OPERACIÓN DE TU ALMACÉN</h2>
+              <hr class="my-4">
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-md-6 text-left">
+              <div class="service-box mt-5 mx-auto">
+              	<h2 style="font-size: 3em;">Si tienes estos problemas</h2>
+               <ul>
+               		<li>Complicaciones para ordenar el inventario</li>
+					<li>Inconvenientes para clasificar los productos</li>
+					<li>Necesitas más espacio en tu almacén</li>
+					<li>No quieres rentar una bodega más grande</li>
+
+               </ul>
+               <div class="col-lg-3 col-md-3">
+               		<img src="img/support.png">
+               	<p>El mejor servicio</p>
+               </div>
+               <div class="col-lg-3 col-md-3">
+               		<img src="img/coin.png">
+               	<p>Precios competitivos</p>
+               </div>
+               <div class="col-lg-3 col-md-3">
+               		<img src="img/quality.png">
+               	<p>Increíble calidad</p>
+               </div>
+           	</div>
+           </div>
+               <div class="col-lg-6 col-md-6">
+               	<img src="img/inge.png">
+               </div>
+            </div>
+           
+          </div>
+        </div>
+      </section>
       <section id="contact">
         <div class="container">
           <div class="row">
@@ -204,12 +189,12 @@
               <div class="row">
             <div class="col-lg-4 ml-auto text-center">
               <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-              <p><a href="tel:83 73-70 20">83 73-70 20</a> /<br> <a href="tel:13 40-02 70">13 40-02 70</a></p>
+              <p><a href="tel:+52 (81) 8105-1000">+52 (81) 8105-1000</a> /<br> <a href="tel:+52 (81) 8105-0308">+52 (81) 8105-0308</a></p>
             </div>
             <div class="col-lg-4 mr-auto text-center">
               <i class="fa fa-envelope-o fa-3x mb-3 sr-contact text-center"></i>
               <p>
-                <a href="mailto:automotriz_ddc@hotmail.com">automotriz_ddc@hotmail.com</a>
+                <a href="mailto:info@estralsolutions.com">info@estralsolutions.com</a>
               </p>
             </div>
           </div>
