--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo_estral.png" width="180"></a>
-        <div class="col-lg-3 offset-lg-6">
+        <div class="col-lg-3 offset-lg-3 d-inline-block">
         	<div class="row">
-        <i class="fa fa-phone fa-2x mb-3 sr-contact phone-header"></i>
+        <i class="fa fa-phone fa-2x mb-3 sr-contact phone-header d-inline-block" style="vertical-align: middle;"></i>
         <h5 style="margin: 5%;"><a href="tel:+52 (81) 8105-1000">+52 (81) 8105-1000</a></h5>
         </div>
         </div>
@@ -134,6 +134,7 @@
       <div class="bg-orange text-white propiedades">
         <div class="container text-center">
           <h1 class="mb-4">CONOCE NUESTAS ESTANTERÍAS METÁLICAS</h1>
+          <h3 class="mb-5">Contamos con cobertura en todo México</h3>
           <a href="catalogo.pdf"><button class="btn btn-lg btn-warning">Descargar catálogo</button></a>
         </div>
       </div>
@@ -158,19 +159,21 @@
 					<li>No quieres rentar una bodega más grande</li>
 
                </ul>
-               <div class="col-lg-3 col-md-3">
-               		<img src="img/support.png">
-               	<p>El mejor servicio</p>
+               <div class="row">
+               <div class="col-lg-4 col-md-4">
+               		<img src="img/support.png"  width="250" class="img-responsive" style="width: 100%; padding: 10%;">
+               	<p class="text-center text-uppercase">El mejor servicio</p>
                </div>
-               <div class="col-lg-3 col-md-3">
-               		<img src="img/coin.png">
-               	<p>Precios competitivos</p>
+               <div class="col-lg-4 col-md-4">
+               		<img src="img/coin.png"  width="250" class="img-responsive" style="width: 100%; padding: 10%;">
+               	<p class="text-center text-uppercase">Precios competitivos</p>
                </div>
-               <div class="col-lg-3 col-md-3">
-               		<img src="img/quality.png">
-               	<p>Increíble calidad</p>
+               <div class="col-lg-4 col-md-4">
+               		<img src="img/quality.png"  width="250" class="img-responsive" style="width: 100%; padding: 10%;">
+               	<p class="text-center text-uppercase">Increíble calidad</p>
                </div>
            	</div>
+            </div>
            </div>
                <div class="col-lg-6 col-md-6">
                	<img src="img/inge.png">
@@ -253,18 +256,18 @@
             </div>
           </div>
         </div>
-              <div class="bg-purple text-white propiedades">
+              <div class="bg-orange text-white propiedades">
         <div class="container text-center">
           <h1 class="mb-4">Ubicacion</h1>
-              <h5 style="color:white;">Av. Ruiz Cortines 4522<br>
-              Col. Burócratas del Estado<br>
-              C.P. 64380<br>
-              Monterrey, Nuevo León,<br>
-              México</h5>
+              <h5 style="color:white;">Km.11. Carr. Guadalajara-El Castillo.<br> 
+                Bloque 3 Lote 4, 45680<br> 
+                Parque Industrial, <br>
+                El Salto Jalisco<br>
+              </h5>
         </div>
       </div>
           <div class="row">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.8065020947!2d-100.36247818498006!3d25.710829883659855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662967b3a0edcd3%3A0x83bdbdba30bee007!2sAutomotriz+Ddc!5e0!3m2!1ses!2smx!4v1537818942404" style="width: 100%; height: 350px;" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3736.731447517812!2d-103.24895155030518!3d20.51723241035386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428b06b12c220b3%3A0x1dd9e00b7c073b00!2sESTRAL+Sistemas+De+Almacenaje!5e0!3m2!1ses!2smx!4v1541730424407" width="600" height="450" frameborder="0" style="width: 100%; height: 350px;" frameborder="0" style="border:0" allowfullscreen ></iframe>
           </div>
       </section>
       <footer class="footer">
@@ -272,8 +275,8 @@
           <div class="row">
             <div class="d-inline-block text-center col-lg-12">
               <h4 class="text-white text-center">Siganos en Facebook</h4>
-              <a href="https://www.facebook.com/Automotriz-ddc-247074948691435/"><i class="fa fa-2x fa-facebook text-primary mb-3 sr-icons" style="padding: 2%;"></i></a>
-              <small><p class="text-white">Consulta nuestro <a href="avisodeprivacidad.pdf">Aviso de Privacidad</p></a></small>
+              <a href="https://www.facebook.com/EstralSolutionsMX/?ref=br_rs"><i class="fa fa-2x fa-facebook mb-3 sr-icons" style="padding: 2%; color: white !important;"></i></a>
+              <small><p class="text-white">Consulta nuestro <a href="avisodeprivacidad.pdf" style="color: white">Aviso de Privacidad</p></a></small>
             </div>
             <div class="d-inline-block">
               
