--- a/index.html
+++ b/index.html
@@ -193,15 +193,15 @@
                   </tr>
                   <tr>
                     <td valign="top">
-                      <label for="telephone">Teléfono</label>
+                      <label for="telephone">Teléfono*</label>
                     </td>
                     <td valign="top">
-                      <input  type="text" name="telephone" maxlength="30" size="20">
+                      <input  type="text" name="telephone" maxlength="30" size="20" required>
                     </td>
                   </tr>
                   <tr>
                     <td valign="top">
-                      <label for="comments">Comentarios *</label>
+                      <label for="comments">Comentarios*</label>
                     </td>
                     <td valign="top">
                       <textarea  name="comments" maxlength="1000" cols="20" rows="6"></textarea>
@@ -212,8 +212,9 @@
                       <input type="submit" value="Enviar">
                     </td>
                   </tr>
+                  <p>Campos requqeridos*</p>
                 </table>
-                <div class="g-recaptcha" data-sitekey="6LdH7XEUAAAAAP4xDZ8ySFl3bO1RLloCfSwIrBvx"></div>
+                
               </form>
             </div>
             <div class="modal-footer">
@@ -342,7 +343,7 @@
           </td>
         </tr>
       </table>
-      <div class="g-recaptcha" data-sitekey="6LdH7XEUAAAAAP4xDZ8ySFl3bO1RLloCfSwIrBvx"></div>
+      
     </form>
   </div>
 </div>
@@ -389,5 +390,24 @@
 <script src="js/creative.min.js"></script>
 <!--MANYCHAT-->
 <script type='text/javascript' data-cfasync='false'>window.purechatApi = { l: [], t: [], on: function () { this.l.push(arguments); } }; (function () { var done = false; var script = document.createElement('script'); script.async = true; script.type = 'text/javascript'; script.src = 'https://app.purechat.com/VisitorWidget/WidgetScript'; document.getElementsByTagName('HEAD').item(0).appendChild(script); script.onreadystatechange = script.onload = function (e) { if (!done && (!this.readyState || this.readyState == 'loaded' || this.readyState == 'complete')) { var w = new PCWidget({c: 'd2f3165c-4c86-42b6-aa4b-7689f3e77883', f: true }); done = true; } }; })();</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130285852-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-130285852-1');
+</script>
+
+<script type="text/javascript">
+  window._mfq = window._mfq || [];
+  (function() {
+    var mf = document.createElement("script");
+    mf.type = "text/javascript"; mf.async = true;
+    mf.src = "//cdn.mouseflow.com/projects/63fe4e20-203b-4657-b3ec-c540b7499885.js";
+    document.getElementsByTagName("head")[0].appendChild(mf);
+  })();
+</script>
 </body>
 </html>
