--- a/index.html
+++ b/index.html
@@ -58,21 +58,113 @@
         </div>
       </div>
     </nav>
-    <header class="masthead text-center text-white d-flex parallax">
-      <div class="container my-auto">
+        <header class="container-full">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <!--SLIDE 1---------------->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/estantes/carton_flow.jpg" alt="First slide">
+            <div class="carousel-caption d-block">
+                <div class="row">
+                  <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase">
+                    <strong class="text-shadow text-white">Venta de estantería metálica</strong>
+                    </h1>
+                    <hr>
+                  </div>
+                  <div class="col-lg-8 mx-auto">
+                    <h4 class="text-faded mb-5 text-background text-white">La solución más económica funcional para productos de almacenamiento general.</h4>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger btn-lg" href="http://estralsolutions.com/sistema-de-almacenaje/carton-flow.html">Ver más</a>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <!--SLIDE 2-------------------------->
+          <div class="carousel-item">
+            <img src="img/estantes/double-deep.jpg">
+            <div class="carousel-caption d-block">
+                <div class="row">
+                  <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase">
+                    <strong class="text-shadow text-white">Venta de estantería metálica</strong>
+                    </h1>
+                    <hr>
+                  </div>
+                  <div class="col-lg-8 mx-auto">
+                    <h4 class="text-faded mb-5 text-background text-white">La solución más económica funcional para productos de almacenamiento general.</h4>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger btn-lg" href="http://estralsolutions.com/sistema-de-almacenaje/double-deep.html">Ver más</a>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <!--Slide 3----------------------------->
+          <div class="carousel-item">
+            <img src="img/estantes/estanteria_ligera.jpg">
+            </div>
+            <div class="carousel-caption d-block">
+                <div class="row">
+                  <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase">
+                    <strong class="text-shadow text-white">Venta de estantería metálica</strong>
+                    </h1>
+                    <hr>
+                  </div>
+                  <div class="col-lg-8 mx-auto">
+                    <h4 class="text-faded mb-5 text-background text-white">La solución más económica funcional para productos de almacenamiento general</h4>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger btn-lg" href="http://estralsolutions.com/sistema-de-almacenaje/estanteria.html">Ver más</a>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <!--Slide 4----------------------------->
+          <div class="carousel-item">
+            <img src="img/estantes/selectivo.jpg">
+            </div>
+            <div class="carousel-caption d-block">
+                <div class="row">
+                  <div class="col-lg-10 mx-auto">
+                    <h1 class="text-uppercase">
+                    <strong class="text-shadow text-white">Venta de estantería metálica</strong>
+                    </h1>
+                    <hr>
+                  </div>
+                  <div class="col-lg-8 mx-auto">
+                    <h4 class="text-faded mb-5 text-background text-white">La solución más económica funcional para productos de almacenamiento general</h4>
+                    <a class="btn btn-primary btn-xl js-scroll-trigger btn-lg" href="http://estralsolutions.com/sistema-de-almacenaje/selectivo.html">Ver más</a>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <!--<div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-            <strong class="text-shadow">Venta de estantería metálica</strong>
+            <strong class="text-shadow">Venta de anaqueles</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <h4 class="text-faded mb-5 text-background text-white"> La solución más económica funcional para productos de almacenamiento general</h4>
+            <h4 class="text-faded mb-5 text-background text-white">Duplica el área y aprovecha al máximo la altura del lugar</h4>
             <a class="btn btn-primary btn-xl js-scroll-trigger btn-lg" href="#about">Ver más</a>
           </div>
         </div>
-      </div>
+      </div>-->
     </header>
     <section class="bg-primary" id="about">
       <div class="container">
@@ -169,7 +261,7 @@
                 <table width="450px">
                   <tr>
                     <td valign="top">
-                      <label for="first_name">Nombre*</label>
+                      <label for="first_name">Nombre completo*</label>
                     </td>
                     <td valign="top">
                       <input  type="text" name="first_name" maxlength="50" size="20">
@@ -177,7 +269,7 @@
                   </tr>
                   <tr>
                     <td valign="top"">
-                      <label for="last_name">Apellido*</label>
+                      <label for="last_name">Empresa*</label>
                     </td>
                     <td valign="top">
                       <input  type="text" name="last_name" maxlength="50" size="20">
@@ -299,7 +391,7 @@
       <table width="450px">
         <tr>
           <td valign="top">
-            <label for="first_name">Nombre*</label>
+            <label for="first_name">Nombre completo*</label>
           </td>
           <td valign="top">
             <input  type="text" name="first_name" maxlength="50" size="20">
@@ -307,7 +399,7 @@
         </tr>
         <tr>
           <td valign="top"">
-            <label for="last_name">Apellido*</label>
+            <label for="last_name">Empresa*</label>
           </td>
           <td valign="top">
             <input  type="text" name="last_name" maxlength="50" size="20">
